-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
Repl 2020-06-15
-
None
-
None
-
None
-
None
-
None
-
None
-
None
While it sounds right for the situtation, it is very much a sharding-specific error. This is actually one of the codes that requires an ExtraErrorInfo object; the StaleConfig version of that (StaleConfigInfo) needs real sharding info, like the shardId, which we do not (and should not) have access to in the ReplicationCoordinator. The simplest solution is to just replace this error code with a different one.
- is related to
-
SERVER-47128 Test race between newlyAdded reconfig and stepup reconfig
-
- Closed
-