SERVER-48582 Change StaleConfig error code in 'newlyAdded' field removal reconfig